[BISERVER-12852] Removed the MaxPermSize Java parameter from all files